@change README.md and composer.json updated;

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "phputil/rtti",
 	"type": "library",
-	"description": "A Run-Time Type Information extractor, useful for getting/setting private attributes from/to objects.",
+	"description": "A Run-Time Type Information extractor, useful for getting/setting private attributes from/to PHP objects.",
 	"keywords": [ "rtti", "run-time", "private", "protected", "php" ],
 	"homepage": "http://github.com/thiagodp/rtti",
 	"license": "LGPL-3",
